# python-maec

./: .gitignore  .landscape.yaml  .travis.yml  CHANGES.txt  LICENSE.txt  MANIFEST.in  README.md  README.rst  setup.cfg  setup.py  tox.ini
docs/: Makefile  conf.py  contributing.rst  examples.rst  getting_started.rst  index.rst  installation.rst  make.bat  overview.rst
docs/_includes/: wip_prolog.rst
docs/api/: __init__.rst  index.rst
docs/api_vs_bindings/: api_snippet.rst  binding_snippet.rst  index.rst
examples/: comparator_example.py  comparator_test.py  comparator_test_2.py  deduplicator_test.py  example1.py  example3.py  package_generation_example.py  package_parsing_example.py  parse_test.py  sample_report_maec.xml  zeus_anubis_maec.xml  zeus_anubis_maec_2.xml  zeus_threatexpert_maec.xml  zeus_threatexpert_maec_2.xml
maec/: __init__.py  id_generator.py  maec_helper.py  maec_id_generator.py  version.py
maec/analytics/: __init__.py  distance.py  static_features.py
maec/bindings/: README.md  __init__.py  maec_2_1.py  maec_bundle.py  maec_bundle_3_0.py  maec_container.py  maec_container_1_0.py  maec_package.py  maec_package_1_0.py  mmdef_1_2.py
maec/bundle/: __init__.py  action_reference_list.py  av_classification.py  av_classifications.py  avclassification.py  behavior.py  behavior_reference.py  bundle.py  bundle_reference.py  candidate_indicator.py  capability.py  malware_action.py  process_tree.py  (+3 more)
scripts/: calculate_distance.py  fuzzy_comparator_test.py  maec_4.0.1_to_4.1.py  maec_to_yaml.py  merge_packages.py  run_comparator.py  run_deduplicator.py
(+59 files in other folders)
