[bumpversion]
current_version = 4.1.0.17
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+).(?P<revision>\d+)
serialize = {major}.{minor}.{patch}.{revision}
commit = True
tag = True

[bumpversion:file:maec/version.py]

[bumpversion:file:docs/index.rst]

[metadata]
license_file = LICENSE.txt

[bdist_wheel]
universal = True

